# Android_LoadSODemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/load/so/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-head.h  native-lib.c
app/src/main/java/com/load/so/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/load/so/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
